--- a/.github/workflows/syncFork.yml
+++ b/.github/workflows/syncFork.yml
@@ -15,7 +15,7 @@ jobs:
     - name: repo-sync
       uses: repo-sync/github-sync@v2
       with:
-        source_repo: "https://github.com/Binaryify/NeteaseCloudMusicApi.git"
+        source_repo: "https://github.com/azwhikaru/fish_helper_config.git"
         source_branch: "master"
-        destination_branch: "master"
+        destination_branch: "syncBranch"
         github_token: ${{ secrets.TOKEN }}
