--- a/.github/workflows/syncFork.yml
+++ b/.github/workflows/syncFork.yml
@@ -19,4 +19,4 @@ jobs:
         source_repo: "https://github.com/azwhikaru/fish_helper_config.git"
         source_branch: "master"
         destination_branch: "syncBranch"
-        github_token: ${{ secrets.TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
